mcompositor (0.4.10~1) unstable; urgency=low

  * New version [UNRELEASED]
  * Fixes: NB#175086 - QMenu texts open as black boxes
  * Improvements: initial support for window transitions when opening a new window or closing an existing one	

 -- Abdiel Janulgue <abj@codefuassasin.research.nokia.com>  Sun, 20 Jun 2010 21:02:34 +0300

mcompositor (0.4.9-1) unstable; urgency=low

  * Fixes: NB#173590 - Calling MApplicationWindow::showFullScreen() flashes Homescreen visible when run first time	
  * Fixes: NB#169665 - Calling showMinimized() for a new window does not open it minimised
  * Fixes: NB#175351 - bluetooth transfer to screenlocked device confuses window management	
	
 -- Abdiel Janulgue <abj@codefuassasin.research.nokia.com>  Tue, 15 Jun 2010 19:30:02 +0300

mcompositor (0.4.8-1) unstable; urgency=low

  * Fixes: NB#172937 - WM_TRANSIENT_FOR stacking does not work correctly
  * Fixes: NB#173375 - mcompositor doesn't respect CWOverrideRedirect
  * Fixes: NB#173857 - Contents of windows of prestarted applications not shown until tapped
  * Fixes: NB#174008 - A fullscreen window got decorated...
  * Fixes: NB#173979 - showFullScreen is not working as it expected...
  * Improvements: reduced window creation time added optimizations	

 -- Abdiel Janulgue <abj@codefuassasin.research.nokia.com>  Fri, 11 Jun 2010 14:22:00 +0300

mcompositor (0.4.7-2) unstable; urgency=low

  * Fixes: NB#168086 - Pure Qt GUI Lists go invisible after mdecorator crashes with sig 11
  * Fixes: NB#171534 - 2 Statusbars shown when rotation angle is non 0 and there's in fullscreen mode with on going call
  * Fixes: NB#170819 - Framework menubar is covering top side application's drawing area
  * Fixes: NB#170228 - In certain scenerio Incoming call view task dosen´t appear in switcher	

 -- Abdiel Janulgue <abj@codefuassasin.research.nokia.com>  Tue, 08 Jun 2010 12:55:48 +0300

mcompositor (0.4.6-1) unstable; urgency=low
